--- a/src/components/FilterCommon/FilterCommon.scss
+++ b/src/components/FilterCommon/FilterCommon.scss
@@ -12,7 +12,7 @@
     position: fixed;
     top: 15px;
     left: 15px;
-    z-index: 3;
+    z-index: 1000;
     width: calc(100vw - 20px);
   }
 }
